--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <title>Chicken Petition</title>
 </head>
@@ -16,5 +16,6 @@
         </section>
     </div>
 
+    <script src="/js/script.js" charset="utf-8"></script>
 </body>
 </html>
