--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -6,7 +6,7 @@
         <label for="last_name">Last Name</label>
         <input type="text" name="last_name" placeholder="Last Name">
         <label for="signature">Signature</label>
-        <input type="hidden" name="signature">
+        <input type="text" name="signature">
 
         <section>
             <canvas id="canvas" width="300" height="300"></canvas>
