--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -9,6 +9,7 @@
         <input type="text" name="signature">
 
         <section>
-            <canvas id="canvas" width="300" height="300"></canvas>
+            <canvas id="canvas" width="300" height="100"></canvas>
         </section>
+        <button type="submit" name="button">SUBMIT</button>
     </form>
