(mew) posting data to db

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,5 +1,9 @@
 <h1>Sign this petition to put real chicken in chicken nuggets!</h1>
     <figure><img src="/img/chicken-mcnugget.jpg" alt="fried chicken head"></figure>
+    <p class="error">{{#if error}}
+    There was a problem with your form. Please try again.
+    {{/if}}</p>
+
     <form method="post" action="/petition">
         <label for="first_name">First Name</label>
         <input type="text" name="first_name" placeholder="First Name">
