--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -13,7 +13,7 @@
         <input type="text" name="signature">
 
         <section>
-            <canvas id="canvas" width="300" height="100"></canvas>
+            <canvas id="canv" width="300" height="100"></canvas>
         </section>
         <button type="submit" name="button">SUBMIT</button>
     </form>
