(mew) sig saved to database

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -10,7 +10,7 @@
         <label for="last_name">Last Name</label>
         <input type="text" name="last_name" placeholder="Last Name">
         <label for="signature">Signature</label>
-        <input type="text" name="signature" id="signature">
+        <input type="hidden" name="signature" id="signature">
 
         <section>
             <canvas id="canv" width="300" height="100"></canvas>
