--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Petition</h1>
+        <h1>Chicken Petition</h1>
         <section class="body">
             {{{body}}}
         </section>
