--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,11 @@
 	src: url('/fonts/Bungee-Shade-webfont.woff') format('woff')
 }
 
+@font-face{
+	font-family: 'Bungee';
+	src: url('/fonts/Bungee-Regular-webfont.woff') format('woff')
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -22,12 +27,18 @@ body {
 h1 {
     font-family: 'Bungee Shade';
     font-size: 40px;
-    margin: 0;
+    margin-top: 30px;
+    line-height: 40px;
 }
 
-h2, p, label {
-    font-family: 'Bungee', Arial, sans-serif;
+h2 {
     padding: 20px 0;
+    font-family: Arial, sans-serif;
+}
+
+p,
+label {
+    font-family: 'Bungee', Arial, sans-serif;
 }
 
 figure {
@@ -53,9 +64,25 @@ input {
     border: 2px #223843 solid;
     border-radius: 10px;
     width: 200px;
-    margin: 30px 10px;
+    margin: 30px 10px 30px 10px;
 }
 
 canvas {
-    border: 1px black solid;
+    border: 2px #223843 solid;
+    border-radius: 10px;
+
+}
+
+button {
+    font-size: 18px;
+    padding: 4px 10px;
+    background-color: #223843;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+button:hover {
+    background: #D77A61;
 }
