(mew) styling done

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,5 +1,5 @@
 <section class="error">
     <div>
-        <h3>404 Not Found!!</h3>
+        <h2 class="error">404 Not Found!!</h2>
     </div>
 </section>
