--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,3 +1,9 @@
-<h1>Thank you for signing this important petition to put real food back in to fast food!</h1>
+<div class="thanks">
+    <figure>
+        <img src="/img/chicken-mcnugget.jpg" alt="fried chicken head">
+    </figure>
 
-<a href="/petition/signatures">See all {{count}} signers</a>
+    <h2>Thank you for signing this important petition to put <span class="emphasis">real</span> food back in to <span class="emphasis">fast</span> food!</h2>
+
+    <a href="/petition/signatures">See all {{count}} signers</a>
+</div>
