--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,12 +22,14 @@ body {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    width: 80%;
+    margin: 0 auto;
 }
 
 h1 {
     font-family: 'Bungee Shade';
     font-size: 40px;
-    margin-top: 30px;
+    margin: 30px 0 10px 0;
     line-height: 40px;
 }
 
@@ -36,9 +38,30 @@ h2 {
     font-family: Arial, sans-serif;
 }
 
+div.thanks,
+div.signees {
+    text-align: center;
+}
+
 p,
-label {
+label,
+a {
     font-family: 'Bungee', Arial, sans-serif;
+}
+
+a,
+a:visited {
+    color: #D77A61;
+    margin: 0 auto;
+    font-size: 20px;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    font-family: Arial, sans-serif;
 }
 
 figure {
@@ -77,7 +100,7 @@ button {
     font-size: 18px;
     padding: 4px 10px;
     background-color: #223843;
-    color: white;
+    color: #EFF1F3;
     border-radius: 10px;
     cursor: pointer;
 
@@ -85,4 +108,10 @@ button {
 
 button:hover {
     background: #D77A61;
+}
+
+.error,
+.emphasis {
+    font-family: 'Bungee', Arial, sans-serif;
+    font-size: 30px;
 }
