--- a/views/signatures.handlebars
+++ b/views/signatures.handlebars
@@ -1,9 +1,15 @@
-<h1>We, the undersigned, demand that real chicken be used to make our chicken nuggets!</h1>
+<div class="signees">
 
-<!-- [{"first_name":"Leonardo","last_name":"DiCaprio"},{"first_name":"Maggie","last_name":"Wiseman"}]
--->
-<ul>
-    {{#each results}}
-    <li>{{this.first_name}} {{this.last_name}}</li>
-    {{/each}}
-</li>
+    <figure>
+        <img src="/img/chicken-mcnugget.jpg" alt="fried chicken head">
+    </figure>
+    <h2>We, the undersigned, demand that real chicken be used to make our chicken nuggets!</h2>
+
+    <!-- [{"first_name":"Leonardo","last_name":"DiCaprio"},{"first_name":"Maggie","last_name":"Wiseman"}]
+    -->
+    <ul>
+        {{#each results}}
+        <li>{{this.first_name}} {{this.last_name}}</li>
+        {{/each}}
+    </li>
+</div>
