--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,8 +110,15 @@ button:hover {
     background: #D77A61;
 }
 
-.error,
 .emphasis {
     font-family: 'Bungee', Arial, sans-serif;
     font-size: 30px;
+}
+
+.error {
+	font-family: 'Bungee', Arial, sans-serif;
+	font-size: 18px;
+	color: #D77A61;
+	text-align: center;
+	margin-top: 30px;
 }
