--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -4,6 +4,8 @@
     </figure>
 
     <h2>Thank you for signing this important petition to put <span class="emphasis">real</span> food back in to <span class="emphasis">fast</span> food!</h2>
-
+    {{#this}}
+    <figure class="signature"><img src="{{imgsrc}}" alt="signature image"></figure>
+    {{/this}}
     <a href="/petition/signatures">See all {{count}} signers</a>
 </div>
