--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -14,3 +14,4 @@
         <input type="password" name="password" placeholder="password">
         <button type="submit" name="button">SUBMIT</button>
     </form>
+<p class="redirect-p">If you are already a member, please <a href="/login">login</a></p>
