--- a/views/signatures.handlebars
+++ b/views/signatures.handlebars
@@ -15,7 +15,9 @@
                 {{this.first_name}} {{this.last_name}}
             {{/if}}
             {{#if this.age}}
-                 ({{this.age}})
+                 ({{this.age}}
+                 {{#if this.city}}, <a href="/petition/signatures/{{this.city}}">{{this.city}}</a>
+                 {{/if}})
             {{/if}}
         </li>
         {{/each}}
