--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,6 +7,7 @@
 </p>
 <form method="post" action="/login">
     <div class="inputs login">
+        <label for="email">E-mail</label>
         <input type="text" name="email" placeholder="e-mail">
         <label for="password">Password</label>
         <input type="password" name="password" placeholder="password">
