--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,34 @@ body {
     color: #223843;
 }
 
+nav {
+	width: 100%;
+	height: 40px;
+	display: fixed;
+	background: #223843;
+}
+
+nav ul {
+	list-style: none;
+	float: right;
+}
+
+nav li {
+	display: inline-block;
+	padding: 6px 10px;
+}
+
+nav a {
+	font-family: Arial, sans-serif;
+	color: #EFF1F3;
+	text-decoration: none;
+	font-size: 14px;
+}
+
+nav a:hover {
+	color: #D8B4A0;
+}
+
 .wrapper {
     display: flex;
     flex-flow: column nowrap;
