--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <title>Chicken Petition</title>
 </head>
 <body>
+    {{>nav}}
     <div class="wrapper">
         <h1>Chicken Petition</h1>
         <section class="body">
