(mew) simplified routes and added edit profile route

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -11,6 +11,7 @@
         <label for="email">e-mail</label>
         <input type="text" name="email" placeholder="e-mail">
         <label for="password">Password</label>
+        <input type="password" name="password" placeholder="password">
         <label for="age">Age</label>
         <input type="text" name="age" placeholder="age">
         <label for="city">City</label>
