--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,4 +1,7 @@
 <nav>
+    <ul class="home">
+        <li><a href="/petition">Home</a></li>
+    </ul>
     <ul>
         <li><a href="/profile/edit">Edit Profile</a></li>
         <li><a href="/logout">Logout</a></li>
