(mew) added delete link and delete routes, refactored client side js and some comments in routes.

--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -8,4 +8,7 @@
     <figure class="signature"><img src="{{imgsrc}}" alt="signature image"></figure>
     {{/this}}
     <a href="/petition/signatures">See all {{count}} signers</a>
+
+    <form method="delete" id="deleteSigForm"></form>
+    <a id="delete">Delete My Signature</a>
 </div>
