(mew) delete signature works

--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -9,6 +9,6 @@
     {{/this}}
     <a href="/petition/signatures">See all {{count}} signers</a>
 
-    <form method="delete" id="deleteSigForm"></form>
+    <form action="/delete" method="POST" id="deleteSigForm"></form>
     <a id="delete">Delete My Signature</a>
 </div>
