(mew) changed link so it has cursor and proper styling

--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -10,5 +10,5 @@
     <a href="/petition/signatures">See all {{count}} signers</a>
 
     <form action="/delete" method="POST" id="deleteSigForm"></form>
-    <a id="delete">Delete My Signature</a>
+    <a href="#" id="delete">Delete My Signature</a>
 </div>
