(mew) moved thankyou function b/c only used once, fixed bug on not giving age and when giving non numeric email wrong redirection

--- a/views/signatures.handlebars
+++ b/views/signatures.handlebars
@@ -14,6 +14,8 @@
             {{/if}}
             {{#if this.age}}
                  ({{this.age}}{{#if this.city}}, <a href="/petition/signatures/{{this.city}}">{{this.city}}</a>{{/if}})
+            {{else if this.city}}
+                (<a href="/petition/signatures/{{this.city}}">{{this.city}}</a>)
             {{/if}}
         </li>
         {{/each}}
