(mew) properly handling bad password and sending an error message

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <figure>
     <img src="/img/chicken-mcnugget.jpg" alt="fried chicken head">
 </figure>
-<p class="error">{{#if error}}
-        There was a problem with your form. Please try again.
+<p class="error">{{#if errorMsg}}
+        There was a problem with your form. Please try again. {{errorMsg}}
         {{/if}}
 </p>
 <form method="post" action="/login">
