(mew) fixed some bugs and added a clear button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -126,6 +126,13 @@ form {
 	align-items: center;
 }
 
+#peition-form-div {
+	text-align: center;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+}
+
 input {
     font-size: 14px;
     padding: 4px;
