--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,6 @@
 <figure><img src="/img/chicken-mcnugget.jpg" alt="fried chicken head"></figure>
-        <p class="error">{{#if error}}
-        There was a problem with your form. Please try again.
+        <p class="error">{{#if errorMsg}}
+        There was a problem with your form. Please try again. {{errorMsg}}
         {{/if}}</p>
     <form method="post" action="/register">
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
