(mew) started carousel

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,5 +1,12 @@
 <h2>Let's get real chicken in chicken nuggets! Who's with me?</h2>
-    <figure><img src="/img/chicken-mcnugget.jpg" alt="fried chicken head"></figure>
+    <div id="carousel">
+        <div class="chicken onscreen"><img src="/img/chicken-mcnugget.jpg" alt="fried chicken head"></div>
+        <div class="chicken"><img src="/img/mcnuggets-raw.jpg" alt="raw meat for chicken nuggets"></div>
+        <div class="chicken"><img src="/img/the-real-pink-slime.jpg" alt="the real pink slime"></div>
+        <div class="chicken"><img src="/img/nugget-chicken.jpg" alt="nuggets acting like chickens"></div>
+        <div class="chicken"><img src="/img/PinkSlim e.gif" alt="pinkSlime facts"></div>
+    </div>
+
     <p class="error">{{#if error}}
     There was a problem with your form. Please try again.
     {{/if}}</p>
