--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,13 +106,42 @@ li {
 	font-size: 20px;
 }
 
-figure {
-    height: 200px;
-    width: 350px;
+figure,
+#carousel {
+	position: relative;
+    height: 300px;
+    width: 450px;
     margin: 0 auto;
     text-align: center;
 }
 
+.chicken {
+    position: absolute;
+    top: 0;
+    left: 0;
+	width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+
+}
+
+.chicken.onscreen {
+    transform: translateX(0);
+    transition-property: Transform;
+    transition-duration: 1s;
+}
+
+.chicken.exit {
+    transform: translateX(-100%);
+    transition-property: Transform;
+    transition-duration: 1s;
+}
+.chicken img {
+    width: 100%;
+	height: auto;
+    object-fit: cover;
+
+}
 img {
     height: 100%;
     border: 10px #223843 solid;
