--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,10 +70,14 @@ h1 {
 }
 
 h2 {
-    padding: 20px 0;
+    padding: 30px 0;
     font-family: Arial, sans-serif;
 }
 
+h2.petition {
+	margin: 40px 0 0 0;
+
+}
 div.thanks,
 div.signees {
     text-align: center;
@@ -108,7 +112,7 @@ li {
 
 figure,
 #carousel {
-	position: relative;
+
     height: 300px;
     width: 450px;
     margin: 0 auto;
@@ -117,10 +121,9 @@ figure,
 
 .chicken {
     position: absolute;
-    top: 0;
     left: 0;
 	width: 100%;
-    height: 100vh;
+    height: 50vh;
     transform: translateX(100%);
 
 }
@@ -136,17 +139,22 @@ figure,
     transition-property: Transform;
     transition-duration: 1s;
 }
-.chicken img {
-    width: 100%;
-	height: auto;
-    object-fit: cover;
 
-}
 img {
     height: 100%;
     border: 10px #223843 solid;
     border-radius: 10px;
 }
+
+.chicken img {
+    width: 100%;
+	height: 100%;
+    object-fit: contain;
+	border-radius: none;
+	border: none;
+
+}
+
 
 form {
     text-align: center;
