--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,11 +1,11 @@
-<h2>Let's get real chicken in chicken nuggets! Who's with me?</h2>
     <div id="carousel">
-        <div class="chicken onscreen"><img src="/img/chicken-mcnugget.jpg" alt="fried chicken head"></div>
-        <div class="chicken"><img src="/img/mcnuggets-raw.jpg" alt="raw meat for chicken nuggets"></div>
+        <div class="chicken onscreen"><img src="/img/mcnuggets-raw.jpg" alt="raw meat for chicken nuggets"></div>
         <div class="chicken"><img src="/img/the-real-pink-slime.jpg" alt="the real pink slime"></div>
         <div class="chicken"><img src="/img/nugget-chicken.jpg" alt="nuggets acting like chickens"></div>
         <div class="chicken"><img src="/img/PinkSlime.gif" alt="pinkSlime facts"></div>
     </div>
+
+    <h2 class="petition">Let's get real chicken in chicken nuggets! Who's with me?</h2>
 
     <p class="error">{{#if error}}
     There was a problem with your form. Please try again.
