--- a/public/css/main.css
+++ b/public/css/main.css
@@ -112,11 +112,10 @@ li {
 
 figure,
 #carousel {
-
-    height: 300px;
-    width: 450px;
+	position: relative;
     margin: 0 auto;
     text-align: center;
+	height: 50vh;
 }
 
 .chicken {
@@ -125,7 +124,6 @@ figure,
 	width: 100%;
     height: 50vh;
     transform: translateX(100%);
-
 }
 
 .chicken.onscreen {
@@ -149,9 +147,10 @@ img {
 .chicken img {
     width: 100%;
 	height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 	border-radius: none;
 	border: none;
+	box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5);
 
 }
 
