--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,9 +1,9 @@
 <div class="signees">
 
     <figure>
-        <img src="/img/chicken-mcnugget.jpg" alt="fried chicken head">
+        <img src="/img/clark-young-135152.jpg" alt="farm pic">
     </figure>
-    <h2>We, residents of {{cityName}}, demand that real chicken be used to make our chicken nuggets!</h2>
+    <h2>We, residents of {{cityName}}, pledge to eat local!</h2>
 
     <!-- [{"first_name":"Leonardo","last_name":"DiCaprio"},{"first_name":"Maggie","last_name":"Wiseman"}]
     -->
