--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <figure>
-    <img src="/img/chicken-mcnugget.jpg" alt="fried chicken head">
+    <img src="/img/anne-preble-198119.jpg" alt="farm pic">
 </figure>
 <p class="error">{{#if errorMsg}}
         There was a problem with your form. Please try again. {{errorMsg}}
