--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-<figure><img src="/img/chicken-mcnugget.jpg" alt="fried chicken head"></figure>
+<figure><img src="/img/anne-preble-198119.jpg" alt="fried chicken head"></figure>
         <p class="error">{{#if error}}
         There was a problem with your form. Please try again.
         {{/if}}</p>
