--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,9 +1,9 @@
 <div class="thanks">
     <figure>
-        <img src="/img/chicken-mcnugget.jpg" alt="fried chicken head">
+        <img src="/img/stijn-te-strake-316914.jpg" alt="fried chicken head">
     </figure>
 
-    <h2>Thank you for signing this important petition to put <span class="emphasis">real</span> food back in to <span class="emphasis">fast</span> food!</h2>
+    <h2>Thank you for pledging to support local farms by committing to eating local for 1 month.</h2>
     {{#this}}
     <figure class="signature"><img src="{{imgsrc}}" alt="signature image"></figure>
     {{/this}}
