--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
 
-    <title>Chicken Petition</title>
+    <title>Support Local Farms!</title>
 </head>
 <body>
     {{>nav}}
     <div class="wrapper">
-        <h1>Chicken Petition</h1>
+        <h1>Eat Local!</h1>
         <section class="body">
             {{{body}}}
         </section>
