--- a/views/signatures.handlebars
+++ b/views/signatures.handlebars
@@ -1,9 +1,9 @@
 <div class="signees">
 
     <figure>
-        <img src="/img/chicken-mcnugget.jpg" alt="fried chicken head">
+        <img src="/img/luke-syres-223433.jpg" alt="farm pic">
     </figure>
-    <h2>We, the undersigned, demand that real chicken be used to make our chicken nuggets!</h2>
+    <h2>We, the undersigned, have pledged to make a difference in our communities by eating local for 1 month!</h2>
 
     <ul>
         {{#each results}}
