--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,6 +1,6 @@
 <div class="petition">
-    <h2>Pledge to eat local for 1 month! <br>
-     Who's in?</h2>
+    <h1>Eat Local!</h1>
+    <h2>Pledge to eat local for 1 month! Who's in?</h2>
     <div id="carousel">
         <div class="food onscreen"><img src="/img/anne-preble-198119.jpg" alt="market"></div>
         <div class="food"><img src="/img/luke-syres-223433.jpg" alt="chickens"></div>
@@ -17,7 +17,7 @@
             <form method="post" action="/petition">
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
                 <div class="sig-div">
-                    <label for="signature">Signature</label>
+                    <label for="signature">Become part of the locavor movement! <br>Sign below to show your commitment to local eating: </label>
                     <input type="hidden" name="signature" id="signature">
 
                     <section>
