(mew) added div for login page spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -203,7 +203,8 @@ canvas {
 
 /*** thanks/signatures styles ***/
 div.thanks,
-div.signees {
+div.signees,
+div.login {
 	margin-top: 20px;
     text-align: center;
 }
