--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,16 +1,19 @@
-<figure><img src="/img/anne-preble-198119.jpg" alt="fried chicken head"></figure>
-        <p class="error">{{#if error}}
+<div class="profile">
+    <figure>
+        <img src="/img/anne-preble-198119.jpg" alt="fried chicken head">
+    </figure>
+    <p class="error">{{#if error}}
         There was a problem with your form. Please try again.
-        {{/if}}</p>
+        {{/if}}
+    </p>
+    <p>Tell us a little about yourself: </p>
     <form method="post" action="/profile">
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <div class="inputs profile">
-            <label for="age">Age</label>
-            <input type="text" name="age" placeholder="age">
-            <label for="city">City</label>
-            <input type="text" name="city" placeholder="City">
-            <label for="homepage">Homepage</label>
-            <input type="text" name="homepage" placeholder="url">
+            <p><input type="text" name="age" placeholder="Age"></p>
+            <p><input type="text" name="city" placeholder="City"></p>
+            <p><input type="text" name="homepage" placeholder="Homepage"></p>
             <button type="submit" name="button">CONTINUE</button>
         </div>
     </form>
+</div>
