--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,10 +9,10 @@
     <form method="post" action="/login">
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <div class="inputs login">
-            <label for="email">E-mail</label>
-            <input type="text" name="email" placeholder="e-mail">
-            <label for="password">Password</label>
-            <input type="password" name="password" placeholder="password">
+
+            <p><label for="email">E-mail</label><input type="text" name="email" placeholder="e-mail"></p>
+        
+            <p><label for="password">Password</label><input type="password" name="password" placeholder="password"></p>
         </div>
             <button type="submit" name="button">SUBMIT</button>
     </form>
