--- a/public/css/main.css
+++ b/public/css/main.css
@@ -259,9 +259,43 @@ div.inputs {
     margin: 0 auto;
 }
 
+div.edit {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr;
+
+}
+
+
+.edit figure {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    display: inline-block;
+
+}
+
+.edit img {
+    width: 100%;
+    height: auto;
+}
+
+/*.edit .side-img {
+    width: 45%;
+    display: inline-block;
+ }
+
+.edit .form-div {
+    width: 45%;
+    display: inline-block;
+}*/
+
 .edit button {
     margin-top: 10px;
 }
+
+
 
 label {
     width: 150px;
