--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,27 +1,36 @@
-        <p class="error">{{#if error}}
-        There was a problem with your form. Please try again.
-        {{/if}}</p>
-    <form method="post" action="/profile/edit">
-        <input type="hidden" name="_csrf" value="{{csrfToken}}">
-        <div class="inputs profile edit">
-            <label for="first_name">First Name</label>
-            <input type="text" name="first_name" placeholder="First Name" value="{{this.first_name}}">
-            <label for="last_name">Last Name</label>
-            <input type="text" name="last_name" placeholder="Last Name" value="{{this.last_name}}">
-            <label for="email">e-mail</label>
-            <input type="text" name="email" placeholder="e-mail" value="{{this.email}}">
-            <!-- <label for="password">Password</label>
-            <input type="password" name="password" placeholder="password"> -->
-            <label for="age">Age</label>
-            <input type="text" name="age" placeholder="age" value="{{this.age}}">
-            <label for="city">City</label>
-            <input type="text" name="city" placeholder="City" value="{{this.city}}">
-            <label for="homepage">Homepage</label>
-            <input type="text" name="homepage" placeholder="url" value="{{this.homepage}}">
-            <button type="submit" name="button">UPDATE</button>
-        </div>
+<div class="edit">
+    <div class="side-img">
+        <p class="error">{{#if thiswillneverdisplay}}
+            There was a problem with your form. Please try again.
+            {{/if}}</p>
+        <figure>
+            <img src="/img/thomas-gamstaetter-130746.jpg" alt="fried chicken head">
+        </figure>
+    </div>
+    <div class="form-div">
+        <p class="error">{{#if errorMsg}}
+            There was a problem with your form. Please try again.
+            {{/if}}</p>
+        <form method="post" action="/profile/edit">
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
+            <div class="inputs profile edit">
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" placeholder="First Name" value="{{this.first_name}}">
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" placeholder="Last Name" value="{{this.last_name}}">
+                <label for="email">e-mail</label>
+                <input type="text" name="email" placeholder="e-mail" value="{{this.email}}">
+                <!-- <label for="password">Password</label>
+                <input type="password" name="password" placeholder="password"> -->
+                <label for="age">Age</label>
+                <input type="text" name="age" placeholder="age" value="{{this.age}}">
+                <label for="city">City</label>
+                <input type="text" name="city" placeholder="City" value="{{this.city}}">
+                <label for="homepage">Homepage</label>
+                <input type="text" name="homepage" placeholder="url" value="{{this.homepage}}">
+                <button type="submit" name="button">UPDATE</button>
+            </div>
 
-    </form>
-
-    <form method="post" action"/password">
-    </form>
+        </form>
+    </div>
+</div>
