--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,5 +1,6 @@
 <nav>
     <ul class="home">
+        <li><p class="logo">Locavore International</p>
         <li><a href="/petition">Home</a></li>
     </ul>
     <ul>
