(mew) capitalized words

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -24,9 +24,9 @@
             </div>
             <div>
                 <p>
-                <input type="text" name="email" placeholder="e-mail"></p>
+                <input type="text" name="email" placeholder="E-mail"></p>
                 <p>
-                <input type="password" name="password" placeholder="password"></p>
+                <input type="password" name="password" placeholder="Password"></p>
 
             </div>
             <p><button type="submit" name="button">Join!</button></p>
